--- a/client/src/component/Nav/navbar.module.scss
+++ b/client/src/component/Nav/navbar.module.scss
@@ -1,12 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans&display=swap");
 
-.navbar{
+.navbar {
   display: flex;
-  justify-content: space-between; /* Distributes space between the three main components */
+  justify-content: space-between;
   align-items: center;
   width: 100%;
   height: 74px;
-  background-color: rgba(255, 255, 255, 0.33);
+  background-color: #FFFFFF54;
   margin: 0 auto;
   position: relative;
   padding: 0%;
@@ -14,59 +14,12 @@
   z-index: 100;
 }
 
-.logo-bg {
-  position: absolute;
-  left: 0;
-  top: 0;
-  z-index: 2;
-  width: 100%;
-  bottom: 0;
-}
 
 .main-section {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
-}
-
-.logo {
-  padding-left: 4em;
-  margin-left: 2rem;
-  width: 20%;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  position: relative;
-  z-index: 2;
-  top: 1px;
-}
-
-.logo img {
-  width: 140px;
-  height: 65px;
-}
-
-.logo-background {
-  flex: 10;
-  background-color: black;  /* set black background */
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;  /* Allows absolute positioning of child elements */
-}
-
-
-.bg-images {
-  position: absolute;
-  z-index: 1;
-  display: flex;
-}
-.bg-img {
-  width: auto;
-  height: auto;
-  background-color: rgb(15, 14, 14);
-  right: 0;
 }
 
 .ul {
@@ -127,31 +80,6 @@
   margin-right: 2rem;
 }
 
-.book {
-  width: 159px;
-    height: 52px;
-    background: #FFFFFF;
-    border-radius: 8px;
-    box-shadow: 0px 2px 4px rgba(77, 77, 77, 0.25);
-    color: #E7A356;
-    margin-right: 5rem;
-
-    span {
-        position: absolute;
-        width: 54px;
-        height: 24px;
-        left: 50%;  /* Centering text horizontally */
-        top: 50%;  /* Centering text vertically */
-        transform: translate(-50%, -50%);  /* Needed for exact centering */
-        font-family: 'Fira Sans';
-        font-weight: 800;
-        font-size: 18px;
-        line-height: 22px;
-        text-transform: capitalize;
-    }
-
-}
-
 
 .buttonsOpen {
   display: flex;
@@ -162,77 +90,61 @@
 }
 
 @media (max-width: 768px) {
-    .container {
-        display: flex;
-        justify-content: space-between;
-    }
+  .container {
+    background-color: white;
+    display: flex;
+    justify-content: space-between;
+  }
 
-    .menuClose {
-        display: none;
-    }
+  .menuClose {
+    display: none;
+  }
 
-    .menuOpen {
-        display: flex;
-        flex-direction: column;
-        max-height: 500px;
-        overflow: hidden;
-        transition: max-height 0.8s ease-in-out;
-        position: absolute;
-        width: 100%;
-        background-color: #F6F6F6;
-        top: 100%;
-        right: 0;
-    }
+  .menuOpen {
+    display: flex;
+    flex-direction: column;
+    max-height: 500px;
+    overflow: hidden;
+    transition: max-height 0.8s ease-in-out;
+    position: absolute;
+    width: 100%;
+    background-color: #F6F6F6;
+    top: 100%;
+    right: 0;
+  }
 
-    .menuOpen a {
-        display: block;
-        margin-top: 20px;
-        margin-bottom: 20px;
-        font-size: larger;
-    }
+  .menuOpen a {
+    display: block;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: larger;
+  }
 
-    .mobileIcons {
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
-        margin-right: 1rem;
-    }
+  .mobileIcons {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-right: 1rem;
+  }
 
-    .icon {
-        font-size: 1.5rem;
-        cursor: pointer;
-        color: white;
-    }
+  .icon {
+    font-size: 1.5rem;
+    cursor: pointer;
+    color: white;
+  }
 
-    .icon:hover {
-        color: #E7A356;
-    }
+  .icon:hover {
+    color: #E7A356;
+  }
 
-    .menuOpen a:hover {
-        color: #E7A356;
-        font-size: x-large;
-    }
-    .container {
-        justify-content: space-between;
-        width: 100%;
-      
-    }
-    .logo {
-        padding-left: 0rem;
-        margin-left: 0.3rem;
-        padding-block: 0.5rem;
-        justify-content: flex-start;
-    }
-    .logo img {
-        width: 110px;
-        height: 45px;
-    }
-    .buttons {
-        margin-right: 0rem;
-    }
-}
+  .menuOpen a:hover {
+    color: #E7A356;
+    font-size: x-large;
+  }
 
-.scrolled-nav {
-  background-color: black;
-  box-shadow: 0 40px 6px -1px rgba(0,0,0,0.1), 0 2px 4px -1px rgba(0,0,0,0.06);
+  .container {
+    justify-content: space-between;
+    width: 100%;
+
+  }
 }
