--- a/client/src/component/Nav/logo.module.scss
+++ b/client/src/component/Nav/logo.module.scss
@@ -1,6 +1,11 @@
 .logo-container {
   position: relative;
   display: inline-block;
+
+  @media (max-width: 768px) {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
 .logo {
