clean up unnecessary comments

--- a/client/src/component/Barber/custom-v-calendar.scss
+++ b/client/src/component/Barber/custom-v-calendar.scss
@@ -1,6 +1,5 @@
 @import "./node_modules/v-calendar-scheduler/scss/variables";
 
-// Set your custom variables
-$v-cal-event-bg: rgba(54, 54, 54, 0.638); // Event background color
-$v-cal-event-border-radius: 10px; // Events border radius (all 4 corners)
+$v-cal-event-bg: rgba(54, 54, 54, 0.638);
+$v-cal-event-border-radius: 10px;
 $v-cal-days-head-color: white;
